// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ios - iPhone X BpkNavigationBar dark mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(19, 29, 43)",
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "shadowColor": null,
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 0,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "space-between",
          "overflow": "visible",
          "paddingTop": 44,
        },
      ]
    }
  >
    <RNGestureHandlerButton
      collapsable={false}
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "opacity": 1,
            "zIndex": 2,
          }
        }
      >
        <Image
          source={1}
          style={
            Array [
              Array [
                Object {
                  "marginEnd": 8,
                },
              ],
              Object {
                "tintColor": "rgb(255, 255, 255)",
              },
            ]
          }
        />
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {},
              Array [
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          Back
        </Text>
      </View>
    </RNGestureHandlerButton>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "height": 44,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "maxWidth": "60%",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Array [
                Object {
                  "color": "rgb(255, 255, 255)",
                },
                null,
              ],
            ]
          }
        >
          Backpack
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ios - iPhone X BpkNavigationBar dark mode should render correctly with trailing button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(19, 29, 43)",
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "shadowColor": null,
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 0,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "space-between",
          "overflow": "visible",
          "paddingTop": 44,
        },
      ]
    }
  >
    <RNGestureHandlerButton
      collapsable={false}
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
    >
      <View
        accessibilityLabel="Cancel"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        style={
          Object {
            "height": "100%",
            "justifyContent": "center",
            "marginStart": 8,
            "opacity": 1,
            "zIndex": 2,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {},
              Array [
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          Cancel
        </Text>
      </View>
    </RNGestureHandlerButton>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "height": 44,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "maxWidth": "60%",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Array [
                Object {
                  "color": "rgb(255, 255, 255)",
                },
                null,
              ],
            ]
          }
        >
          Backpack
        </Text>
      </View>
    </View>
    <RNGestureHandlerButton
      collapsable={false}
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
    >
      <View
        accessibilityLabel="Done"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        style={
          Object {
            "height": "100%",
            "justifyContent": "center",
            "marginEnd": 8,
            "opacity": 1,
            "zIndex": 2,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Array [
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          Done
        </Text>
      </View>
    </RNGestureHandlerButton>
  </View>
</View>
`;

exports[`ios - iPhone X BpkNavigationBar light mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(239, 241, 242)",
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "shadowColor": "rgb(224, 227, 229)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 0,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "space-between",
          "overflow": "visible",
          "paddingTop": 44,
        },
      ]
    }
  >
    <RNGestureHandlerButton
      collapsable={false}
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "opacity": 1,
            "zIndex": 2,
          }
        }
      >
        <Image
          source={1}
          style={
            Array [
              Array [
                Object {
                  "marginEnd": 8,
                },
              ],
              Object {
                "tintColor": "rgb(22, 22, 22)",
              },
            ]
          }
        />
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(22, 22, 22)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {},
              Array [
                Object {
                  "color": "rgb(22, 22, 22)",
                },
              ],
            ]
          }
        >
          Back
        </Text>
      </View>
    </RNGestureHandlerButton>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "height": 44,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "maxWidth": "60%",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "rgb(22, 22, 22)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Array [
                Object {
                  "color": "rgb(22, 22, 22)",
                },
                null,
              ],
            ]
          }
        >
          Backpack
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ios - iPhone X BpkNavigationBar light mode should render correctly with trailing button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(239, 241, 242)",
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "shadowColor": "rgb(224, 227, 229)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 0,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "space-between",
          "overflow": "visible",
          "paddingTop": 44,
        },
      ]
    }
  >
    <RNGestureHandlerButton
      collapsable={false}
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
    >
      <View
        accessibilityLabel="Cancel"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        style={
          Object {
            "height": "100%",
            "justifyContent": "center",
            "marginStart": 8,
            "opacity": 1,
            "zIndex": 2,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(22, 22, 22)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {},
              Array [
                Object {
                  "color": "rgb(22, 22, 22)",
                },
              ],
            ]
          }
        >
          Cancel
        </Text>
      </View>
    </RNGestureHandlerButton>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "height": 44,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "maxWidth": "60%",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "rgb(22, 22, 22)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Array [
                Object {
                  "color": "rgb(22, 22, 22)",
                },
                null,
              ],
            ]
          }
        >
          Backpack
        </Text>
      </View>
    </View>
    <RNGestureHandlerButton
      collapsable={false}
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
    >
      <View
        accessibilityLabel="Done"
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        style={
          Object {
            "height": "100%",
            "justifyContent": "center",
            "marginEnd": 8,
            "opacity": 1,
            "zIndex": 2,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(22, 22, 22)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Array [
                Object {
                  "color": "rgb(22, 22, 22)",
                },
              ],
            ]
          }
        >
          Done
        </Text>
      </View>
    </RNGestureHandlerButton>
  </View>
</View>
`;
